# QAC_Streamlit

./: Dockerfile  pyproject.toml  readMe.md  requirements.txt  streamlit.py  streamlit_new.py
.devcontainer/: devcontainer.json
