[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qac-ser-tool"
version = "0.1.0"
description = "Static site for Cloudflare Pages"
requires-python = ">=3.10,<3.12"

dependencies =[altair==5.5.0
attrs==25.3.0
blinker==1.9.0
cachetools==5.5.2
click==8.1.8
colorama==0.4.6
et_xmlfile==2.0.0
gitdb==4.0.12
GitPython==3.1.45
importlib-metadata==6.11.0
Jinja2==3.1.6
jsonschema==4.25.1
jsonschema-specifications==2025.9.1
markdown-it-py==3.0.0
MarkupSafe==3.0.2
mdurl==0.1.2
narwhals==2.5.0
numpy==1.26.4
openpyxl==3.1.5
packaging==23.2
pandas==2.3.2
Pillow
protobuf==4.25.8
pyarrow==21.0.0
pydeck==0.9.1
Pygments==2.19.2
Pympler==1.1
pyperclip==1.11.0
python-dateutil==2.9.0.post0
pytz==2025.2
# pytz-deprecation-shim==0.1.0.post0
# pywin32==311
referencing==0.36.2
requests==2.15.1
rich==13.9.4
rpds-py==0.27.1
six==1.17.0
smmap==5.0.2
streamlit==1.24.1
tenacity==8.5.0
toml==0.10.2
tornado==6.5.2
typing_extensions==4.15.0
tzdata==2025.2
tzlocal==4.3.1
validators==0.35.0
watchdog==6.0.0
zipp==3.23.0
]